<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/own" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyButton"
        android:id="@+id/spotify"
        android:layout_marginTop="100dp"
        android:layout_alignEnd="@+id/own"
        android:layout_alignStart="@+id/textView"
        android:background="@drawable/buttons"
        android:enabled="true"
        android:clickable="true"
        android:onClick="displayToast"
        android:nestedScrollingEnabled="true"
        android:elegantTextHeight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresAppButton"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify"
        android:layout_alignEnd="@+id/spotify"
        android:layout_alignStart="@+id/textView"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="displayToast"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryButton"
        android:id="@+id/library"
        android:layout_below="@+id/scores"
        android:layout_alignEnd="@+id/scores"
        android:layout_alignStart="@+id/own"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="displayToast"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBiggerButton"
        android:id="@+id/bigger"
        android:layout_below="@+id/library"
        android:layout_alignEnd="@+id/library"
        android:layout_alignStart="@+id/own"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="displayToast"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzButton"
        android:id="@+id/xyz"
        android:layout_below="@+id/bigger"
        android:layout_alignEnd="@+id/bigger"
        android:layout_alignStart="@+id/own"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="displayToast"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myOwnButton"
        android:id="@+id/own"
        android:layout_below="@+id/xyz"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="displayToast"
        android:clickable="true" />

</RelativeLayout>
